--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,8 @@ dependencies:
   get_it: ^7.2.0
   provider: ^6.0.5
   dio: ^5.0.3
-  retrofit: ^4.0.1
-  build_runner: ^2.3.3
   json_annotation: ^4.8.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
